# qa

./: .env  .gitignore  Dockerfile  IMPORTANT.md  README.md  agent.py  agent2.py  analyze_docs_llm.py  api.py  api2.py  claude.md  cleaening.py  cleaning.py  docker-compose.yml  document_embeddings.pkl  document_index.faiss  document_map.json  downloadpages.py  embedding_visualization_data.csv  filtered_documents_prod.json  filtered_documents_prod_new.json  filtered_documents_prod_new2.json  flashexperiment.py  graph_rag_demo.py  hello.json  hello2.json  hello3.json  main.py  newclean.py  nginx.conf  qa_bot.py  rag.py  rag_demo.py  rag_simple.py  railway.toml  requirements.txt  scrap.py  scraper.py  similar.md  similar3.md  (+4 more)
rag_project/: README.md  pyproject.toml  requirements.txt  setup.py
rag_project/src/: __init__.py  main.py
rag_project/src/config/: settings.py
rag_project/src/models/: policy_models.py  support_models.py
rag_project/src/services/: policy_analyzer.py  rag_bot.py  retrieval_service.py
rag_project/src/utils/: error_handlers.py  logging_config.py
server/: Dockerfile  main.py  pyproject.toml
server/bot/: __init__.py  main.py
server/bot/data/: document_summaries.json
server/bot/data/policies/: Amazon Seller Flex - Incorrect Weight and Dimensions Policy.md  Documents required for various Reimbursement Requests.md  Easy Ship and Self Ship refund and reimbursement policy for non-returnable products.md  Easy Ship replacements.md  FBA Reimbursement Policy For Fulfillment Centres (FC).md  (+18 more)
server/bot/utils/: read_docs.py  schema.py  templates.py
(+24469 files in other folders)
